module(
    name = "rules_testing",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")

# TODO(https://github.com/bazelbuild/stardoc/issues/117): stardoc doesn't yet
# work with bzlmod enabled. Once that's fixed, uncomment this and set the
# version appropriatly
# bazel_dep(name = "stardoc", version = "<version>", dev_dependency = True)
